--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.15.0",
     "framer-motion": "^8.4.2",
     "history": "^5.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
